Add @vitejs/plugin-basic-ssl for HTTPS support and enhance wallet initialization logic

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-basic-ssl": "^2.1.0",
     "@vitejs/plugin-react": "^5.1.1",
     "@vitest/ui": "^2.1.8",
     "eslint": "^9.39.1",
