--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@metamask/jazzicon": "^2.0.0",
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
     "@noble/curves": "^1.7.0",
