feat: Enhance network configuration and dashboard UI for improved user experience

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ VITE_ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/YOUR_INFURA_KEY
 VITE_BASE_RPC_URL=https://mainnet.base.org
 VITE_OPTIMISM_RPC_URL=https://mainnet.optimism.io
 VITE_ARBITRUM_RPC_URL=https://arb1.arbitrum.io/rpc
+VITE_POLYGON_RPC_URL=https://polygon-rpc.com
+VITE_ZORA_RPC_URL=https://rpc.zora.energy
 
 # API Keys
 VITE_COINGECKO_API_KEY=your_coingecko_api_key_here
